# chatter

./: Cargo.toml  README.md
data/: chat1.txt
src/: app_util.rs  main.rs
src/stream/: base.rs  csv.rs  mod.rs  twitch.rs
