[package]
name = "streamchat"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rouille = "3.6.2"
open = "5.3.2"
urlencoding = "2.1.3"
toml = "0.8.22"
serde_millis = "0.1.1"
uuid = { version = "1.16.0", features = ["v4"] }
