[package]
name = "streamchat"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "d39022432c778a8cda455f40b9c12245db86ce45", features = [
  "tokio",
  "sipper",
] }
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rouille = "3.6.2"
open = "5.3.2"
urlencoding = "2.1.3"
toml = "0.8.22"
serde_millis = "0.1.1"
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.88"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

[profile.release]
debug = 1
